{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 27,
  "lineage": "f0abf6de-2879-904f-67c3-7610b9ae66fe",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054037139242:loadbalancer/app/test-lb-tf/5408bc602db8493e",
            "arn_suffix": "app/test-lb-tf/5408bc602db8493e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1730666831.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:054037139242:loadbalancer/app/test-lb-tf/5408bc602db8493e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002df02e85a34b169"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0674ccc3837cd704d"
              },
              {
                "subnet_id": "subnet-067815bafef92b9f5"
              }
            ],
            "subnets": [
              "subnet-0674ccc3837cd704d",
              "subnet-067815bafef92b9f5"
            ],
            "tags": {
              "Environment": "my-tf-lb"
            },
            "tags_all": {
              "Environment": "my-tf-lb"
            },
            "vpc_id": "vpc-0aa95e30d349d89d1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054037139242:listener/app/test-lb-tf/5408bc602db8493e/cdcffb95172226fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:054037139242:targetgroup/tf-alb-target-group/d0bc81e8f23c6698",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:054037139242:listener/app/test-lb-tf/5408bc602db8493e/cdcffb95172226fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:054037139242:loadbalancer/app/test-lb-tf/5408bc602db8493e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_lb.tf-lb",
            "module.ALB.aws_lb_target_group.my_target_group",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:054037139242:targetgroup/tf-alb-target-group/d0bc81e8f23c6698",
            "arn_suffix": "targetgroup/tf-alb-target-group/d0bc81e8f23c6698",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:054037139242:targetgroup/tf-alb-target-group/d0bc81e8f23c6698",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:054037139242:targetgroup/tf-alb-target-group/d0bc81e8f23c6698-20241227150947897700000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:054037139242:targetgroup/tf-alb-target-group/d0bc81e8f23c6698",
            "target_id": "i-064e86766db46e7d0"
          },
          "dependencies": [
            "module.ALB.aws_lb_target_group.my_target_group",
            "module.compute.aws_instance.private1",
            "module.compute.aws_instance.private2",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.my-tf-vpc",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-group-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:054037139242:targetgroup/tf-alb-target-group/d0bc81e8f23c6698-2024122715094837570000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:054037139242:targetgroup/tf-alb-target-group/d0bc81e8f23c6698",
            "target_id": "i-0a4ceba3f0563f33d"
          },
          "dependencies": [
            "module.ALB.aws_lb_target_group.my_target_group",
            "module.compute.aws_instance.private1",
            "module.compute.aws_instance.private2",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.my-tf-vpc",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01816d07b1128cd2d",
            "arn": "arn:aws:ec2:us-east-1:054037139242:instance/i-064e86766db46e7d0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064e86766db46e7d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02885d9aa4fc712a7",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0665bc6148d1ac888",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-002df02e85a34b169"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7337add6a47ad0a",
            "tags": {
              "Name": "private-instance-tf"
            },
            "tags_all": {
              "Name": "private-instance-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002df02e85a34b169"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.my-tf-vpc",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01816d07b1128cd2d",
            "arn": "arn:aws:ec2:us-east-1:054037139242:instance/i-0a4ceba3f0563f33d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4ceba3f0563f33d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e04d7a22c579a57",
            "private_dns": "ip-10-0-3-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04eab7939aa5477db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-002df02e85a34b169"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4d84c2482a471ce",
            "tags": {
              "Name": "private-instance-tf"
            },
            "tags_all": {
              "Name": "private-instance-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002df02e85a34b169"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.my-tf-vpc",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01816d07b1128cd2d",
            "arn": "arn:aws:ec2:us-east-1:054037139242:instance/i-08904bed2714fb081",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08904bed2714fb081",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07542754d6deccd36",
            "private_dns": "ip-10-0-0-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.6",
            "public_ip": "35.173.228.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e7c5471b9d1aacbf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-002df02e85a34b169"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067815bafef92b9f5",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002df02e85a34b169"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4dacfcdcceb3e1e",
            "arn": "arn:aws:ec2:us-east-1:054037139242:elastic-ip/eipalloc-0a4dacfcdcceb3e1e",
            "domain": "vpc",
            "id": "eipalloc-0a4dacfcdcceb3e1e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-219-118-222.compute-1.amazonaws.com",
            "public_ip": "44.219.118.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_NAT"
            },
            "tags_all": {
              "Name": "EIP_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-tf-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:internet-gateway/igw-009dbbe31d6c31b52",
            "id": "igw-009dbbe31d6c31b52",
            "owner_id": "054037139242",
            "tags": {
              "Name": "nginx-ig"
            },
            "tags_all": {
              "Name": "nginx-ig"
            },
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4dacfcdcceb3e1e",
            "association_id": "eipassoc-0634dd0f09ae4bfc0",
            "connectivity_type": "public",
            "id": "nat-08516d0d17b8b0ebf",
            "network_interface_id": "eni-034ada514bb8af485",
            "private_ip": "10.0.0.4",
            "public_ip": "44.219.118.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-067815bafef92b9f5",
            "tags": {
              "Name": "NAT_GW01"
            },
            "tags_all": {
              "Name": "NAT_GW01"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.my-tf-ig",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:route-table/rtb-04ccce6809f610b7a",
            "id": "rtb-04ccce6809f610b7a",
            "owner_id": "054037139242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08516d0d17b8b0ebf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-rt"
            },
            "tags_all": {
              "Name": "my-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.my-tf-ig",
            "module.networking.aws_nat_gateway.nat_01",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:route-table/rtb-0e19ad5e6974a41b3",
            "id": "rtb-0e19ad5e6974a41b3",
            "owner_id": "054037139242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009dbbe31d6c31b52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-rt"
            },
            "tags_all": {
              "Name": "my-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.my-tf-ig",
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f3c38ce78bf1fbe",
            "route_table_id": "rtb-04ccce6809f610b7a",
            "subnet_id": "subnet-0f7337add6a47ad0a"
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.my-tf-ig",
            "module.networking.aws_nat_gateway.nat_01",
            "module.networking.aws_route_table.private-route-table",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07074d54def1727db",
            "route_table_id": "rtb-04ccce6809f610b7a",
            "subnet_id": "subnet-0d4d84c2482a471ce"
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.my-tf-ig",
            "module.networking.aws_nat_gateway.nat_01",
            "module.networking.aws_route_table.private-route-table",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eae1ba3c01f78791",
            "route_table_id": "rtb-0e19ad5e6974a41b3",
            "subnet_id": "subnet-067815bafef92b9f5"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.my-tf-ig",
            "module.networking.aws_route_table.public-route-table",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f89baa4b082fab5",
            "route_table_id": "rtb-0e19ad5e6974a41b3",
            "subnet_id": "subnet-0674ccc3837cd704d"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.my-tf-ig",
            "module.networking.aws_route_table.public-route-table",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:subnet/subnet-0f7337add6a47ad0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7337add6a47ad0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037139242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-private-subnet-01"
            },
            "tags_all": {
              "Name": "nginx-private-subnet-01"
            },
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:subnet/subnet-0d4d84c2482a471ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4d84c2482a471ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037139242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-private-subnet-02"
            },
            "tags_all": {
              "Name": "nginx-private-subnet-02"
            },
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:subnet/subnet-067815bafef92b9f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067815bafef92b9f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037139242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-public-subnet-01"
            },
            "tags_all": {
              "Name": "nginx-public-subnet-01"
            },
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:subnet/subnet-0674ccc3837cd704d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0674ccc3837cd704d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037139242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-public-subnet-02"
            },
            "tags_all": {
              "Name": "nginx-public-subnet-02"
            },
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:vpc/vpc-0aa95e30d349d89d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e2b3ab0e54ea689",
            "default_route_table_id": "rtb-03935f43952675976",
            "default_security_group_id": "sg-0db882a7fab059c57",
            "dhcp_options_id": "dopt-05acdb2ff4f4900ba",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa95e30d349d89d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03935f43952675976",
            "owner_id": "054037139242",
            "tags": {
              "Name": "nginx-vpc"
            },
            "tags_all": {
              "Name": "nginx-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:security-group/sg-0e43627485f39bcac",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e43627485f39bcac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-security-group",
            "name_prefix": "",
            "owner_id": "054037139242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-security-group"
            },
            "tags_all": {
              "Name": "private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:054037139242:security-group/sg-002df02e85a34b169",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002df02e85a34b169",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-security-group",
            "name_prefix": "",
            "owner_id": "054037139242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-security-group"
            },
            "tags_all": {
              "Name": "public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa95e30d349d89d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my-tf-vpc"
          ]
        }
      ]
    }
  ]
}